tests/bad/24_invalid_char.src
# Test: Invalid character in source
void main() {
    return 42@;  # Invalid character
}
